--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -26,13 +26,20 @@ html {
     height: 600px;
     background-color: rgba(0, 0, 0, 0.4) !important;
     position: relative;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-clip: border-box;
+    border: 1px solid rgba(0, 0, 0, 0.125);
 }
 
-.send-message-group {
+/* .send-message-group {
     position: absolute;
     bottom: 0;
     width: 100%;
-}
+} */
 
 .left-card {
     border-radius: 12px 0px 0px 12px !important;
@@ -224,7 +231,7 @@ html {
 .msg_time_send {
     position: absolute;
     right: 0;
-    bottom: -15px;
+    bottom: -18px;
     color: rgba(255, 255, 255, 0.5);
     font-size: 10px;
 }
