--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -7,7 +7,7 @@
         </div>
         <div class="form-group">
             <label class="text-white" for="password">Password</label>
-            <input required type="text" name="password" id="password" class="form-control">
+            <input required type="password" name="password" id="password" class="form-control">
         </div>
         <div class="form-group">
             <label class="text-white" for="avatar">Avatar</label>
@@ -15,7 +15,10 @@
                 accept="image/*">
         </div>
         <button class="btn mb-2" type="submit">Register</button>
-        <p class="text-white">Have had an account? <a class="text-white" href="/login">Login
-                now</a></p>
+        <p class="text-white mb-1">Have had an account?</p>
+        <a class="text-white" href="/login">
+            <i class="fa-solid fa-right-from-bracket"></i>
+            Login now
+        </a>
     </form>
 </div>
