--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -2,14 +2,17 @@
     <form action="/login" method="POST" id="login-form" class="p-4 w-30 m-auto border-radius-12">
         <div class="form-group">
             <label class="text-white" for="username">Username</label>
-            <input type="text" name="username" id="username" class="form-control">
+            <input required type="text" name="username" id="username" class="form-control">
         </div>
         <div class="form-group">
             <label class="text-white" for="password">Password</label>
-            <input type="text" name="password" id="password" class="form-control">
+            <input required type="password" name="password" id="password" class="form-control">
         </div>
         <button class="btn mb-2" type="submit">Login</button>
-        <p class="text-white">Haven't had an account yet? <a class="text-white"
-                href="/register">Register now</a></p>
+        <p class="text-white mb-1">Haven't had an account yet?</p>
+        <a class="text-white" href="/register">
+            <i class="fa-solid fa-right-from-bracket"></i>
+            Register now
+        </a>
     </form>
 </div>
